--- a/Prj-Android/app/src/main/res/layout/activity_input.xml
+++ b/Prj-Android/app/src/main/res/layout/activity_input.xml
@@ -53,6 +53,7 @@
             android:textSize="14sp"
             android:singleLine="true"
             android:maxLines="2"
+            android:text="rtmp://172.30.1.163/live/baby"
             android:gravity="left|center_vertical"
             android:hint="@{config.type == 0 ? `请输入推流地址` : `请输入拉流地址`}"
             android:background="@drawable/shape_edit"/>
