--- a/Prj-Android/app/src/main/res/layout/activity_main.xml
+++ b/Prj-Android/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:srcCompat="@drawable/img_push"></androidx.appcompat.widget.AppCompatImageView>
+                app:srcCompat="@drawable/img_push" />
 
             <TextView
                 android:id="@+id/tv_push_title"
