--- a/Prj-Android/app/src/main/res/layout/activity_pull.xml
+++ b/Prj-Android/app/src/main/res/layout/activity_pull.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="io.anyrtc.liveplayer.PullActivity.PlayStatus"></import>
+
+        <import type="io.anyrtc.liveplayer.PullActivity.PlayStatus" />
         <variable
             name="playStatus"
             type="PlayStatus" />
@@ -25,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></org.webrtc.TextureViewRenderer>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tv_status"
@@ -36,7 +37,7 @@
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="24dp"></TextView>
+            android:layout_margin="24dp" />
 
 
         <TextView
@@ -47,7 +48,7 @@
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_status"
-            android:layout_margin="24dp"></TextView>
+            android:layout_margin="24dp" />
 
 
         <ImageView
